test/files/pos/t10639/broken_2.scala

object Broken extends App {
  println(Size_1.SMALL)
}
