test/files/neg/macro-quasiquotes/Test_2.scala
object Test extends App {
  Macros.m1
  Macros.m2
  Macros.m3
}
